screenshot,formatting,naming

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
-Theme Name: Giacometti
+Theme Name: Balsa Starter Theme
 Theme URI: http://
-Author: Thomas Lartaud
-Author URI: http://www.thomaslartaud.com/
-Description: A multi-purpose clean and minimal theme, with a customer area integration.
+Author: Vincent Prat
+Author URI: http://vincentprat.info
+Description: 
 Version: 0.0.1
 License:
 License URI:
